Fix textarea layout bug

--- a/monitoring-app/src/app/components/NoteForm.module.css
+++ b/monitoring-app/src/app/components/NoteForm.module.css
@@ -26,6 +26,7 @@
 
 .side {
   width: 100%;
+  height: auto;
   background: var(--grey);
   border-radius: 2rem;
   overflow: hidden;
@@ -57,9 +58,8 @@
 }
 
 .side textarea {
-  display: flex;
+  display: block;
   width: 100%;
-  height: 100%;
   resize: none;
   border: 0;
   outline: 0;
@@ -67,6 +67,8 @@
   padding: 0.5rem;
   border-radius: 1rem;
   border: 1px solid var(--darkGrey);
+  box-sizing: border-box;
+  min-height: 6rem;
 }
 
 .imageInputContainer {
